--- a/index.html
+++ b/index.html
@@ -88,9 +88,8 @@
   <div class="container-fluid" id="intro">
     <div class="d-flex flex-column my-5">
       <i class="fa fa-5x fa-user mx-auto mb-5 personicon" aria-hidden="true"></i>
-      <h3 style="text-align: center;" class="mb-5"> <small>I am doing my Master in Information Systems Management (Wirtschaftsinformatik) and specializing in Data Science and Machine Learning at <br> <a href="https://www.tu.berlin/"
-            target="_blank" class="text-info">Technische Universität Berlin</a>.</small></h3>
-
+      <h3 style="text-align: center;" class="mb-5"> <small>I am currently enrolled in a master's program at <a href="https://www.tu.berlin/"
+        target="_blank" class="text-info">Technische Universität Berlin</a>, specializing in Data Science and Machine Learning.</small></h3>
       <h3 style="text-align: center;"><small>I did my Bachelors in Electrical And Computer Engineering </small></h3>
 
     </div>
@@ -128,7 +127,7 @@
           <div style="max-width: 500px;" class="mx-auto">
             <h3 class="text-primary mb-2 font-weight-bold" style="text-align:center; line-height:40px;">GetSteps</h3>
             <h3 style="text-align:center; line-height:40px;" class="mb-5"><small class="font-weight-bold"> (December,
-                2022 - Present)
+                2022 - April, 2023)
               </small><br><small class="mb-2 font-weight-bold">Business Intelligence - Working Student.</small><br><small
                 class="mb-2">Design data pipelines using SQL and utilize Airbyte for efficient data importing from diverse sources. 
                 Created various data marts, which were then used to create dashboards in Metabase.</small></h3>
@@ -323,9 +322,6 @@
               </li>
               <li class="list">
                 <h4><small class="font-weight-bold">Matlab</small></h4>
-              </li>
-              <li class="list">
-                <h4><small class="font-weight-bold">VBA</small></h4>
               </li>
               <li class="list">
                 <h4><small class="font-weight-bold">Pytorch</small></h4>
