--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
       <div class="my-auto mx-auto d-flex flex-column">
         <h1 class="display-2 font-weight-bold text1 ">Interested to look at my CV? Click below.</h1>
         <br>
-        <a href="" target="_blank" class="btn btn-lg mx-auto CVbutton">
+        <a href="assets/Syed Ali Murad_Tahir_Resume.pdf" target="_blank" class="btn btn-lg mx-auto CVbutton">
           <i class="fa fa-eye fa-2x mx-auto CVeye"></i>
         </a>
       </div>
