Made changes to profile

--- a/index.html
+++ b/index.html
@@ -275,6 +275,26 @@
             </p>
             <button onclick="window.open('https://github.com/stahir01/Image-Processing-for-Remote-Sensing/blob/master/HW02.ipynb', '_blank')">Go to Github Repo</button>
           </li>
+          <li>
+            <h2>2023</h2>
+            <h3 style="color: white; font-weight: bold;">Customer Segmentation using Deep Learning</h3>
+            <p>
+              Numpy, Sklearn, TensorFlow, Keras.
+              <br><br>
+              For code, click below.
+            </p>
+            <button onclick="window.open('https://github.com/stahir01/Customer-Segmentation/blob/main/Data_Science_Case_Study_company%20version.ipynb', '_blank')">Go to Github Repo</button>
+          </li>
+          <li>
+            <h2>2023</h2>
+            <h3 style="color: white; font-weight: bold;">Analyzing car rental dataset using SQL</h3>
+            <p>
+              SQL, Jupyter Notebook.
+              <br><br>
+              For code, click below.
+            </p>
+            <button onclick="window.open('https://github.com/stahir01/SQL_Business_Case/blob/main/Sql_Business_Case.ipynb', '_blank')">Go to Github Repo</button>
+          </li>
     </ul>
   </div>
 
