Added new projects

--- a/index.html
+++ b/index.html
@@ -204,6 +204,67 @@
   <div class="mx-5">
     <ul class="tilesWrap my-5">
       <li>
+        <h2>2023</h2>
+        <h3 style="color: white; font-weight: bold;">Enhancing Movie Recommendations with
+          Behavior Sequence Transformer</h3>
+        <p>
+          NumPy, Pandas, TensorFlow, Keras
+          <br><br>
+          For code, click below.
+        </p>
+        <button onclick="window.open('https://github.com/stahir01/Neuronale_Informationsverarbeitung', '_blank')">Go to Github Repo</button>
+      </li>
+      <li>
+        <h2>2023</h2>
+        <h3 style="color: white; font-weight: bold;">Large Language Models for Reliable Berlin Public Administration Answers</h3>
+        <p>
+          LangChain, TensorFlow, Hugging Face
+          <br><br>
+          For code, click below.
+        </p>
+        <button onclick="window.open('', '_blank')">Go to Github Repo</button>
+      </li>
+      <li>
+        <h2>2023</h2>
+        <h3 style="color: white; font-weight: bold;">Financial News Sentiment Analysis</h3>
+        <p>
+          Numpy, Pandas, Circlify, Sklearn, TensorFlow, Keras, NLTK, Matplotlib
+          <br><br>
+          For code, click below.
+        </p>
+        <button onclick="window.open('https://github.com/stahir01/Sentiment-Analysis-Financial-News', '_blank')">Go to Github Repo</button>
+      </li>
+      <li>
+        <h2>2023</h2>
+        <h3 style="color: white; font-weight: bold;">Designing Seq2Seq Translation Model (English to Bulgarian) with Attention Mechanism</h3>
+        <p>
+          Numpy, Pandas, Circlify, Sklearn, TensorFlow, Keras, NLTK, Matplotlib
+          <br><br>
+          For code, click below.
+        </p>
+        <button onclick="window.open('https://github.com/stahir01/Machine-Translation', '_blank')">Go to Github Repo</button>
+      </li>
+      <li>
+        <h2>2023</h2>
+        <h3 style="color: white; font-weight: bold;">Customer Segmentation using Deep Learning</h3>
+        <p>
+          Numpy, Sklearn, TensorFlow, Keras.
+          <br><br>
+          For code, click below.
+        </p>
+        <button onclick="window.open('https://github.com/stahir01/Customer-Segmentation/blob/main/Data_Science_Case_Study_company%20version.ipynb', '_blank')">Go to Github Repo</button>
+      </li>
+      <li>
+        <h2>2023</h2>
+        <h3 style="color: white; font-weight: bold;">Analyzing car rental dataset using SQL</h3>
+        <p>
+          SQL, Jupyter Notebook.
+          <br><br>
+          For code, click below.
+        </p>
+        <button onclick="window.open('https://github.com/stahir01/SQL_Business_Case/blob/main/Sql_Business_Case.ipynb', '_blank')">Go to Github Repo</button>
+      </li>
+      <li>
         <h2>2022</h2>
         <h3 style="color: white; font-weight: bold;">CNN for Biomedical Image Segmentation</h3>
         <p>
@@ -275,26 +336,6 @@
             </p>
             <button onclick="window.open('https://github.com/stahir01/Image-Processing-for-Remote-Sensing/blob/master/HW02.ipynb', '_blank')">Go to Github Repo</button>
           </li>
-          <li>
-            <h2>2023</h2>
-            <h3 style="color: white; font-weight: bold;">Customer Segmentation using Deep Learning</h3>
-            <p>
-              Numpy, Sklearn, TensorFlow, Keras.
-              <br><br>
-              For code, click below.
-            </p>
-            <button onclick="window.open('https://github.com/stahir01/Customer-Segmentation/blob/main/Data_Science_Case_Study_company%20version.ipynb', '_blank')">Go to Github Repo</button>
-          </li>
-          <li>
-            <h2>2023</h2>
-            <h3 style="color: white; font-weight: bold;">Analyzing car rental dataset using SQL</h3>
-            <p>
-              SQL, Jupyter Notebook.
-              <br><br>
-              For code, click below.
-            </p>
-            <button onclick="window.open('https://github.com/stahir01/SQL_Business_Case/blob/main/Sql_Business_Case.ipynb', '_blank')">Go to Github Repo</button>
-          </li>
     </ul>
   </div>
 
@@ -341,16 +382,21 @@
                 <h4><small class="font-weight-bold">SQL</small></h4>
               </li>
               <li class="list">
-                <h4><small class="font-weight-bold">Matlab</small></h4>
+                <h4><small class="font-weight-bold">LangChain</small></h4>
               </li>
               <li class="list">
-                <h4><small class="font-weight-bold">Pytorch</small></h4>
+                <h4><small class="font-weight-bold">Hugging Face</small></h4>
               </li>
+              <li list="list">
+                <h4><small class="font-weight-bold">NLTK</small></h4>
               <li class="list">
                 <h4><small class="font-weight-bold">TensorFlow</small></h4>
               </li>
               <li class="list">
                 <h4><small class="font-weight-bold">Keras</small></h4>
+              </li>
+              <li class="list">
+                <h4><small class="font-weight-bold">Pytorch</small></h4>
               </li>
               <li class="list">
                 <h4><small class="font-weight-bold">Numpy</small></h4>
