--- a/index.html
+++ b/index.html
@@ -119,10 +119,24 @@
   <div class="container-fluid text" style="background-color: #383838">
     <div class="d-flex flex-column py-5">
       <div class="row mx-5">
+        <!-- Top row of job entries -->
+  
         <div class="col d-flex flex-column mx-3">
-          <div class="jobCardsJU border border-primary mx-auto mb-2 mx-auto"
+          <div class="jobCardsTesla border border-primary mx-auto mt-5 mb-2"
+            onClick="window.open('https://www.tesla.com/', '_blank');" style="cursor: pointer;">
+          </div>
+          <div style="max-width: 500px;" class="mx-auto">
+            <h3 class="text-primary mb-2 font-weight-bold" style="text-align:center; line-height:40px;">Tesla</h3>
+            <h3 style="text-align:center; line-height:40px;" class="mb-5"><small class="font-weight-bold"> (September,
+                2023 - Current)
+              </small><br><small class="mb-2 font-weight-bold">Data Engineer Intern</small><br><small
+                class="mb-2">-</small></h3>
+          </div>
+        </div>
+  
+        <div class="col-sm-6 d-flex flex-column">
+          <div class="jobCardsJU border border-primary mx-auto mt-5 mb-2"
             onClick="window.open('https://get-steps.com/', '_blank');" style="cursor: pointer;">
-
           </div>
           <div style="max-width: 500px;" class="mx-auto">
             <h3 class="text-primary mb-2 font-weight-bold" style="text-align:center; line-height:40px;">GetSteps</h3>
@@ -134,12 +148,13 @@
           </div>
         </div>
       </div>
+  
+      <!-- Bottom row of job entries -->
+  
       <div class="row mx-5">
-
         <div class="col-sm-6 d-flex flex-column">
           <div class="jobCardsUp border border-primary mx-auto mt-5 mb-2"
             onClick="window.open('https://europcar-mobility-group.com/', '_blank');" style="cursor: pointer;">
-
           </div>
           <div style="max-width: 500px;" class="mx-auto">
             <h3 class="text-primary mb-2 font-weight-bold" style="text-align:center; line-height:40px;">Europcar Mobility Group</h3>
@@ -148,15 +163,11 @@
               <small>Create and maintain data pipelines
                 and ensure correct data storage.</small><br><small class="mb-2">Use SQL to extract, clean, and merge data, update databases, test reports, and provide data to other departments. </small></h3>
           </div>
-
         </div>
-
-
-
-        <div class="col-sm-6 d-flex flex-column">
+  
+        <div class="col d-flex flex-column mx-3">
           <div class="jobCardsVp border border-primary mx-auto mt-5 mb-2"
             onClick="window.open('https://www.rohde-schwarz.com/de', '_blank');" style="cursor: pointer;">
-
           </div>
           <div style="max-width: 500px;" class="mx-auto">
             <h3 class="text-primary mb-2 font-weight-bold" style="text-align:center; line-height:40px;">Rohde & Schwarz</h3>
@@ -166,13 +177,11 @@
             </h3>
           </div>
         </div>
-
       </div>
-
     </div>
   </div>
-
-
+  
+  
 
 
 
