Updated Resume, Work Experience, and Skills

--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
             <h3 style="text-align:center; line-height:40px;" class="mb-5"><small class="font-weight-bold"> (September,
                 2023 - Current)
               </small><br><small class="mb-2 font-weight-bold">Data Engineer Intern</small><br><small
-                class="mb-2">-</small></h3>
+                class="mb-2">Design ETL pipelines in Airflow using Python and SQL, and creating interactive 
+                time series dashboards in Grafana integrated with InfluxDB. Lead the development and maintenance of 
+                engineering dashboards, and present them to stakeholders across the USA and Germany.</small></h3>
           </div>
         </div>
   
@@ -417,8 +419,6 @@
                 <h4><small class="font-weight-bold">Matplotlib</small></h4>
               </li>
 
-
-
             </ul>
           </div>
         </div>
@@ -462,6 +462,21 @@
               </li>
               <li class="list">
                 <h4><small class="font-weight-bold">SAP</small></h4>
+              </li>
+              <li class="list">
+                <h4><small class="font-weight-bold">Airflow</small></h4>
+              </li>
+              <li class="list">
+                <h4><small class="font-weight-bold">Grafana</small></h4>
+              </li>
+              <li class="list">
+                <h4><small class="font-weight-bold">InfluxDB</small></h4>
+              </li>
+              <li class="list">
+                <h4><small class="font-weight-bold">Docker</small></h4>
+              </li>
+              <li class="list">
+                <h4><small class="font-weight-bold">ClickHouse</small></h4>
               </li>
 
             </ul>
