Updated Work Experience

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <h3 class="text-primary mb-2 font-weight-bold" style="text-align:center; line-height:40px;">Tesla</h3>
             <h3 style="text-align:center; line-height:40px;" class="mb-5"><small class="font-weight-bold"> (September,
                 2023 - Current)
-              </small><br><small class="mb-2 font-weight-bold">Data Engineer Intern</small><br><small
+              </small><br><small class="mb-2 font-weight-bold">Data Engineer - Working Student</small><br><small
                 class="mb-2">Design ETL pipelines in Airflow using Python and SQL, and create interactive 
                 time series dashboards in Grafana integrated with InfluxDB. Lead the development and maintenance of 
                 engineering dashboards, and present them to stakeholders across the USA and Germany.</small></h3>
