Updated Resume by adding new projects and removed some skills

--- a/index.html
+++ b/index.html
@@ -216,6 +216,15 @@
     <ul class="tilesWrap my-5">
       <li>
         <h2>2023</h2>
+        <h3 style="color: white; font-weight: bold;">Extracting & Analyzing Contract Information Using LLMs</h3>
+        <p>
+          <br><br>
+          For code, click below.
+        </p>
+        <button onclick="window.open('https://github.com/stahir01/clearlea_challenge', '_blank')">Go to Github Repo</button>
+      </li>
+      <li>
+        <h2>2023</h2>
         <h3 style="color: white; font-weight: bold;">Enhancing Movie Recommendations with
           Behavior Sequence Transformer</h3>
         <p>
@@ -387,11 +396,15 @@
                 <h4><small class="font-weight-bold">Python</small></h4>
               </li>
               <li class="list">
-                <h4><small class="font-weight-bold">HTML</small></h4>
-              </li>
-              <li class="list">
                 <h4><small class="font-weight-bold">SQL</small></h4>
               </li>
+              <li class="list">
+                <h4><small class="font-weight-bold">Go</small></h4>
+              </li>
+              <li class="list">
+                <h4><small class="font-weight-bold">HTML</small></h4>
+              </li>
+              <!--
               <li class="list">
                 <h4><small class="font-weight-bold">LangChain</small></h4>
               </li>
@@ -418,6 +431,7 @@
               <li class="list">
                 <h4><small class="font-weight-bold">Matplotlib</small></h4>
               </li>
+            //-->
 
             </ul>
           </div>
@@ -425,9 +439,6 @@
         <div class="col-sm-6">
           <div class="mb-5">
             <ul style="list-style-type:none">
-              <li class="list">
-                <h4><small class="font-weight-bold">VS Code</small></h4>
-              </li>
               <li class="list">
                 <h4><small class="font-weight-bold">Linux</small></h4>
               </li>
@@ -446,11 +457,6 @@
               <li class="list">
                 <h4><small class="font-weight-bold">Data Studio</small></h4>
               </li>
-
-              <li class="list">
-                <h4><small class="font-weight-bold">Google Colab/Jupyter Notebook</small></h4>
-              </li>
-
               <li class="list">
                 <h4><small class="font-weight-bold">BigQuery</small></h4>
               </li>
