Updated Resume, website title, experience section, and ordered skills

--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@
   <div class="container-fluid" id="intro">
     <div class="d-flex flex-column my-5">
       <i class="fa fa-5x fa-user mx-auto mb-5 personicon" aria-hidden="true"></i>
-      <h3 style="text-align: center;" class="mb-5"> <small>I am currently enrolled in a master's program at <a href="https://www.tu.berlin/"
-        target="_blank" class="text-info">Technische Universität Berlin</a>, specializing in Data Science and Machine Learning.</small></h3>
-      <h3 style="text-align: center;"><small>I did my Bachelors in Electrical And Computer Engineering </small></h3>
-
+      <h3 style="text-align: center;" class="mb-5"> <small>I am a Data Engineer with nearly three years of experience, and 
+      a recent graduate from <a href="https://www.tu.berlin/" target="_blank" class="text-info">Technische Universität Berlin</a>, 
+      specializing in Machine Learning.</small></h3>
     </div>
   </div>
 
@@ -162,8 +161,7 @@
             <h3 class="text-primary mb-2 font-weight-bold" style="text-align:center; line-height:40px;">Europcar Mobility Group</h3>
             <h3 style="text-align: center; line-height: 40px;" class="mb-5"><small class="font-weight-bold"> (September, 2021
                 - November, 2022)</small><br><small class="mb-2 font-weight-bold">Business Intelligence - Working Student </small> <br>
-              <small>Create and maintain data pipelines
-                and ensure correct data storage.</small><br><small class="mb-2">Use SQL to extract, clean, and merge data, update databases, test reports, and provide data to other departments. </small></h3>
+                <small>Develop and maintain ETL pipelines using SQL, and create interactive dashboards in Looker, providing actionable insights.</small>
           </div>
         </div>
   
@@ -174,8 +172,8 @@
           <div style="max-width: 500px;" class="mx-auto">
             <h3 class="text-primary mb-2 font-weight-bold" style="text-align:center; line-height:40px;">Rohde & Schwarz</h3>
             <h3 style="text-align: center; line-height: 40px;" class="mb-3"><small class="font-weight-bold"> (April, 2021 - July, 2021)
-              </small><br><small class="mb-2 font-weight-bold">Research Assistant & Software Developer</small><br><small class="mb-2">Support my supervisor by designing data visualization using
-                SQL and Tableau for business KPIs and used Machine Learning models such as Time series forecasting for predicting future sales in Tableau.</small>
+              </small><br><small class="mb-2 font-weight-bold">BI Software Developer</small><br>
+              <small class="mb-2">Designed and maintained ETL workflows using SQL and developed interactive dashboards in Tableau to analyze sales performance and forecast trends.</small>
             </h3>
           </div>
         </div>
@@ -214,6 +212,16 @@
 
   <div class="mx-5">
     <ul class="tilesWrap my-5">
+      <li>
+        <h2>2024</h2>
+        <h3 style="color: white; font-weight: bold;">Aircraft Conceptual Design through Machine Learning and Deep Learning Techniques</h3>
+        <p>
+          NumPy, Pandas, SciPy, Seaborn, Matplotlib, TensorFlow, Keras, Scikit-learn, SDV
+          <br><br>
+          For code, click below.
+        </p>
+        <button onclick="window.open('https://www.theses.tu-berlin.de/de/theses/0189b119-5c17-79a5-b740-50ae34162207', '_blank')">Go to Github Repo</button>
+      </li>
       <li>
         <h2>2024</h2>
         <h3 style="color: white; font-weight: bold;">Extracting & Analyzing Contract Information Using LLMs</h3>
@@ -439,52 +447,21 @@
         <div class="col-sm-6">
           <div class="mb-5">
             <ul style="list-style-type:none">
-              <li class="list">
-                <h4><small class="font-weight-bold">Linux</small></h4>
-              </li>
-              <li class="list">
-                <h4><small class="font-weight-bold">Git</small></h4>
-              </li>
-              <li class="list">
-                <h4><small class="font-weight-bold">Latex</small></h4>
-              </li>
-              <li class="list">
-                <h4><small class="font-weight-bold">Tableau</small></h4>
-              </li>
-              <li class="list">
-                <h4><small class="font-weight-bold">Metabase</small></h4>
-              </li>
-              <li class="list">
-                <h4><small class="font-weight-bold">Data Studio</small></h4>
-              </li>
-              <li class="list">
-                <h4><small class="font-weight-bold">BigQuery</small></h4>
-              </li>
-              <li class="list">
-                <h4><small class="font-weight-bold">dbt</small></h4>
-              </li>
-              <li class="list">
-                <h4><small class="font-weight-bold">Airbyte</small></h4>
-              </li>
-              <li class="list">
-                <h4><small class="font-weight-bold">SAP</small></h4>
-              </li>
-              <li class="list">
-                <h4><small class="font-weight-bold">Airflow</small></h4>
-              </li>
-              <li class="list">
-                <h4><small class="font-weight-bold">Grafana</small></h4>
-              </li>
-              <li class="list">
-                <h4><small class="font-weight-bold">InfluxDB</small></h4>
-              </li>
-              <li class="list">
-                <h4><small class="font-weight-bold">Docker</small></h4>
-              </li>
-              <li class="list">
-                <h4><small class="font-weight-bold">ClickHouse</small></h4>
-              </li>
-
+              <li class="list"> <h4><small class="font-weight-bold">Linux</small></h4> </li>
+              <li class="list"> <h4><small class="font-weight-bold">Git</small></h4> </li>
+              <li class="list"> <h4><small class="font-weight-bold">Tableau</small></h4> </li>
+              <li class="list"> <h4><small class="font-weight-bold">Metabase</small></h4> </li>
+              <li class="list"> <h4><small class="font-weight-bold">Data Studio</small></h4> </li>
+              <li class="list"> <h4><small class="font-weight-bold">Grafana</small></h4> </li>
+              <li class="list"> <h4><small class="font-weight-bold">BigQuery</small></h4> </li>
+              <li class="list"> <h4><small class="font-weight-bold">ClickHouse</small></h4> </li>
+              <li class="list"> <h4><small class="font-weight-bold">InfluxDB</small></h4> </li>
+              <li class="list"> <h4><small class="font-weight-bold">Airbyte</small></h4> </li>
+              <li class="list"> <h4><small class="font-weight-bold">Airflow</small></h4> </li>
+              <li class="list"> <h4><small class="font-weight-bold">dbt</small></h4> </li>
+              <li class="list"> <h4><small class="font-weight-bold">SAP</small></h4> </li>
+              <li class="list"> <h4><small class="font-weight-bold">Docker</small></h4> </li>
+              <li class="list"> <h4><small class="font-weight-bold">LaTeX</small></h4> </li>
             </ul>
           </div>
         </div>
