Added LLM section

--- a/index.html
+++ b/index.html
@@ -4,22 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Burny's Protfolio</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="freehtml5.co" />
 
-
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
@@ -347,12 +332,14 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>My Work</h2>
+					<p>Here are some of the projects I’ve worked on. For certain projects, you can find the GitHub source code in my repository, 
+						while others are not available for public access. Click on the icons below to explore each project in detail!</p>
 				</div>
 			</div>
 			<div class="row text-center">
 				<!-- ETL & Dashboard Section -->
 				<div class="col-md-3 col-sm-6 col-xs-12">
-					<a href="your-dashboard-etl-page.html" class="work-circle">
+					<a href="etl_page.html" class="work-circle">
 						<div class="circle-icon">
 							<i class="icon-cogs"></i> <!-- Replace with your desired icon -->
 						</div>
@@ -363,7 +350,7 @@
 	
 				<!-- LLM & NLP Section -->
 				<div class="col-md-3 col-sm-6 col-xs-12">
-					<a href="your-llm-nlp-page.html" class="work-circle">
+					<a href="llm-nlp-page.html" class="work-circle">
 						<div class="circle-icon">
 							<i class="icon-bubble"></i> <!-- Replace with your desired icon -->
 						</div>
@@ -374,7 +361,7 @@
 	
 				<!-- Financial Machine Learning Section -->
 				<div class="col-md-3 col-sm-6 col-xs-12">
-					<a href="your-finance-ml-page.html" class="work-circle">
+					<a href="ml-page.html" class="work-circle">
 						<div class="circle-icon">
 							<i class="icon-network"></i> <!-- Replace with your desired icon -->
 						</div>
