Updared all experience pages

--- a/index.html
+++ b/index.html
@@ -124,6 +124,18 @@
 								</div>
 							</div>
 						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">BI - Software Developer</h3>
+									<span class="company">Rohde & Schwarz	 - 04/2021 - 07/2021</span>
+								</div>
+								<div class="timeline-body">
+									<p>Designed data pipelines and dashboards for various stakeholders</p>
+								</div>
+							</div>
+						</li>
 
 						<br>
 						<li class="timeline-heading text-center animate-box">
@@ -260,6 +272,9 @@
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="100"><span><strong>Looker Studio</strong></span></div>
 				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="100"><span><strong>Tableau</strong></span></div>
+				</div>
 			</div>
 	
 			<!-- ETL Tools Section -->
@@ -372,7 +387,7 @@
 	
 				<!-- Thesis Section -->
 				<div class="col-md-3 col-sm-6 col-xs-12">
-					<a href="your-thesis-page.html" class="work-circle">
+					<a href="thesis-page.html" class="work-circle">
 						<div class="circle-icon">
 							<i class="icon-airplane"></i> <!-- Replace with your desired icon -->
 						</div>
