--- a/llm-nlp-page.html
+++ b/llm-nlp-page.html
@@ -2,7 +2,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Burny's Protfolio</title>
+	<title>NLP & LLM Experience</title>
 
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
