Updated ETL page

--- a/etl_page.html
+++ b/etl_page.html
@@ -34,32 +34,36 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Trust the magic of new beginning</h2>
+					<h2>Trust the Magic of New Beginnings</h2>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-12 text-center">
-                    <p>
-						After completing my bachelor’s degree in Electrical and Computer Engineering, I found myself at a crossroads, 
-						unsure of where my career path would lead. For nearly a year, I explored different possibilities, searching for something 
-						that would allow me to make a tangible impact. Then came my first role as a Business Intelligence Analyst at Europcar—a pivotal 
-						moment that opened my eyes to the transformative power of data. Here, I was immersed in the world of data-driven decision-making, where every 
-						insight and analysis had the potential to shape strategy and drive real business outcomes.
-					</p>
-					
 					<p>
-						Since that first experience, my journey has taken me across multiple companies, where I’ve developed end-to-end data solutions that support critical business functions. 
-						From designing data pipelines and marts to creating interactive dashboards, I’ve been privileged to see the direct impact of my work in departments as diverse as Engineering, Finance, Controlling, 
-						and even among external stakeholders.
-					</p> 
-					
-					<p>Throughout the years, I’ve refined my skills in delivering tailored insights that empower teams to make data-backed decisions. While many of these projects are proprietary, 
-						below are a few examples that highlight my expertise and commitment to excellence in BI and Data Engineering.
+						Growing up, I was always fascinated by the flashing numbers and glowing charts of Wall Street. But it wasn’t the thrill of trading or the chaos of the stock exchange that captivated me—it was the dashboards. 
+						Those dynamic displays told stories, transforming complex data points into a cohesive narrative. I found myself wondering: How do these systems work? How do they take raw, chaotic numbers and turn them into insights that drive decisions?
 					</p>
+	
+					<p>
+						After completing my bachelor’s degree in Electrical and Computer Engineering, I stood at a fork in the road. I had two choices: stay in the engineering path I was already familiar with, or venture into the unknown world of Business Analytics and Data Science. The engineering route was straightforward—it was what I had studied, and it felt safe. But I asked myself: Do I want to do engineering work for the rest of my life? That question lingered, and the allure of the unknown grew stronger.
+					</p>
+	
+					<p>
+						What drew me to the field of data wasn’t just the programming or the math—though those are undeniably important. It was the multidisciplinary nature of the work. Being a BI Analyst wasn’t just about building models or coding scripts; it required me to bridge gaps. I had to connect with customers, interpret their needs, and turn raw, unstructured data into actionable insights. It was about understanding not just the data, but also the people behind it—the stakeholders and decision-makers. Data science, I realized, was as much an art of understanding humans as it was a science of understanding numbers.
+					</p>
+	
+					<p>
+						My first opportunity in this field came at Europcar, where I transitioned from theory to practice. Suddenly, I wasn’t just observing dashboards—I was building them. I created solutions that drove decisions across Engineering, Finance, and even Supply Chain Management. Each dashboard wasn’t just a tool; it was a window into the business, helping teams uncover insights and take meaningful action. Whether it was optimizing operations for engineering teams, providing financial clarity to executives, or streamlining supply chain processes, I saw the tangible impact of my work.
+					</p>
+	
+					<p>
+						Today, I remain deeply passionate about bridging the gap between data and decision-making. Below, you’ll find a collection of projects that reflect my journey—a journey fueled by curiosity, guided by creativity, and driven by a desire to make data not just understandable, but impactful.
+					</p>
+				</div>
 			</div>
 		</div>
 	</div>
-	
+
     <div id="fh5co-work" class="fh5co-bg-dark">
 		<div class="container">
 			<div class="row animate-box">
