--- a/etl_page.html
+++ b/etl_page.html
@@ -40,20 +40,20 @@
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<p>
-						Growing up, I was always fascinated by the flashing numbers and glowing charts of Wall Street. But it wasn’t the thrill of trading or the chaos of the stock exchange that captivated me—it was the dashboards. 
+						Growing up, I was always fascinated by the flashing numbers and glowing charts of Wall Street. But it wasn’t the thrill of trading or the chaos of the stock exchange that captivated me but the dashboards. 
 						Those dynamic displays told stories, transforming complex data points into a cohesive narrative. I found myself wondering: How do these systems work? How do they take raw, chaotic numbers and turn them into insights that drive decisions?
 					</p>
 	
 					<p>
-						After completing my bachelor’s degree in Electrical and Computer Engineering, I stood at a fork in the road. I had two choices: stay in the engineering path I was already familiar with, or venture into the unknown world of Business Analytics and Data Science. The engineering route was straightforward—it was what I had studied, and it felt safe. But I asked myself: Do I want to do engineering work for the rest of my life? That question lingered, and the allure of the unknown grew stronger.
+						After completing my bachelor’s degree in Electrical and Computer Engineering, I stood at a fork in the road. I had two choices: stay in the engineering path I was already familiar with, or venture into the unknown world of Business Analytics and Data Science. The engineering route was straightforward as it was what I had studied, and it felt safe. But I asked myself: Do I want to do engineering work for the rest of my life? That question lingered, and the allure of the unknown grew stronger.
 					</p>
 	
 					<p>
-						What drew me to the field of data wasn’t just the programming or the math—though those are undeniably important. It was the multidisciplinary nature of the work. Being a BI Analyst wasn’t just about building models or coding scripts; it required me to bridge gaps. I had to connect with customers, interpret their needs, and turn raw, unstructured data into actionable insights. It was about understanding not just the data, but also the people behind it—the stakeholders and decision-makers. Data science, I realized, was as much an art of understanding humans as it was a science of understanding numbers.
+						What drew me to the field of data wasn’t just the programming or the math, though those are undeniably important. It was the multidisciplinary nature of the work. Being a BI Analyst wasn’t just about building models or coding scripts; it required me to bridge gaps. I had to connect with customers, interpret their needs, and turn raw, unstructured data into actionable insights. It was about understanding not just the data, but also the people behind it: stakeholders and decision-makers. I realised that Data Science was as much an art of understanding humans as it was a science of understanding numbers.
 					</p>
 	
 					<p>
-						My first opportunity in this field came at Europcar, where I transitioned from theory to practice. Suddenly, I wasn’t just observing dashboards—I was building them. I created solutions that drove decisions across Engineering, Finance, and even Supply Chain Management. Each dashboard wasn’t just a tool; it was a window into the business, helping teams uncover insights and take meaningful action. Whether it was optimizing operations for engineering teams, providing financial clarity to executives, or streamlining supply chain processes, I saw the tangible impact of my work.
+						My first opportunity in this field came at Europcar, where I transitioned from theory to practice. Suddenly, I wasn’t just observing dashboard but building them. I created solutions that drove decisions across Engineering, Finance, and even Supply Chain Management. Each dashboard wasn’t just a tool but a window into the business, helping teams uncover insights and take meaningful action. Whether it was optimizing operations for engineering teams, providing financial clarity to executives, or streamlining supply chain processes, I saw the tangible impact of my work.
 					</p>
 	
 					<p>
@@ -63,6 +63,97 @@
 			</div>
 		</div>
 	</div>
+
+	<div id="fh5co-work" class="fh5co-bg-dark">
+		<div class="container">
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<h2>ETL: Extract, Transform, and Pray</h2>
+					<p>Because Nothing Says Adventure Like Debugging at Midnight</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="fh5co-about" class="animate-box">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 text-center">
+					<p class="full-width-paragraph">
+						Picture this: A pile of Excel files containing fragmented data about demand planning. Forecasts, stock levels, and revenue numbers—all sitting in silos, waiting to be transformed into meaningful insights. We had a mission: to turn this chaos into clarity. Enter <strong>Airflow</strong>, our trusty orchestrator in this adventure.
+					</p>
+					<p>
+						The journey began with extracting data from these Excel files. Every day, a new file would drop into our system. Using Airflow’s <em>DAGs</em> (Directed Acyclic Graphs), we automated the process of fetching these files and ensuring they were ready for transformation. It wasn’t just about fetching the data; it was about making sure no piece went missing.
+					</p>
+					<div class="image-container">
+						<img src="images/demand_planning_pipeline.png" alt="ETL Pipeline" style="width: 800px; height: auto; border-radius: 15px;">
+					</div>
+					<div style="margin-top: 20px; margin-bottom: 20px;">
+						<a href="https://github.com/stahir01/Data-Engineering-Portfolio/blob/main/dags/demand_planning_pipeline.py" 
+						   class="btn btn-primary" 
+						   target="_blank">
+							View ETL Scripts
+						</a>
+					</div>
+					<p>
+						Raw data is like raw ingredients; it needs preparation to shine. We wrote custom Python scripts to perform the transformations: renaming columns, calculating profit margins, and predicting reorder levels. Using Airflow, we scheduled these transformations so they happened seamlessly every single day. It wasn’t always smooth sailing, as debugging errors became a daily ritual, but seeing clean, structured data emerge was worth every line of code. Once transformed, the data was loaded into our <strong>PostgreSQL</strong> database.
+					</p>
+					<p class="full-width-paragraph">
+						Once the data was transformed and safely housed in our PostgreSQL database, it was time to bring it to life. Enter <strong>Power BI</strong>, the canvas where raw numbers and metrics transformed into a masterpiece of actionable insights. The goal? To create a dashboard that wasn’t just functional but intuitive. The dashboard became the heartbeat of demand planning. It provided an interactive interface where stakeholders could explore key metrics like forecast accuracy, stock availability, reorder levels, and profit margins. Every graph, every filter, and every visualization was designed to make the data not only accessible but actionable.
+					</p>
+					<div class="image-container">
+						<img src="images/demand_planning_dashboard.png" alt="Demand Planning Dashboard" style="width: 900px; height: auto; border-radius: 15px;">
+					</div>
+					<div style="margin-top: 20px; margin-bottom: 20px;">
+						<a href="https://app.powerbi.com/view?r=eyJrIjoiYjVjYjgwNTMtNTQwMi00Nzg4LTlmOTEtNWFmMmY5MjgwY2JiIiwidCI6IjYyZjg5ZTM2LWNlZjctNDMwMC1iYTFhLWU3YWU2N2ZhMmJhYSJ9" 
+						   class="btn btn-primary" 
+						   target="_blank">
+							View Interactive Dashboard
+						</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<div id="fh5co-work" class="fh5co-bg-dark">
+		<div class="container">
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<h2>The Data Assembly Line</h2>
+					<p>Transforming Chaos into Order with Python, Airflow, and BigQuery</p>
+				</div>
+			</div>
+		</div>
+	</div>
+    <div id="fh5co-about" class="animate-box">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <p class="full-width-paragraph">
+						Sometimes, the real magic lies not in visualizing data but in building the invisible pathways that make the data accessible. In this project, we tackled the challenge of merging disparate datasets: transactions, user profiles, and preferences.The journey was about creating a seamless flow of data, using <strong>Airflow</strong> as the architect of this orchestration.
+					</p>
+					<p>
+						At the heart of it all was the extraction process, where multiple Excel files containing transaction logs and user details were ingested daily. With <em>Airflow DAGs</em>, we automated this operation to ensure that no file was ever left behind. Each piece of raw data was carefully fetched, validated, and handed over to the next stage of its transformation.
+					</p>
+					<p>
+						With the data extracted, the real work began. Using Python, we transformed the data—renaming columns, cleaning unnecessary fields, and merging tables to create a unified structure. Transactions were enriched with user details and preferences, making it easier to analyze behavioral patterns in future use cases. This transformation wasn’t just about cleaning; it was about creating relationships between datasets, turning numbers and text into a story of user engagement.
+					</p>
+					<p>
+						Once transformed, the data was loaded into a <strong>BigQuery</strong> table. This repository served as a scalable and high-performance solution for storing the newly structured data. Every row and column in the final table was a testament to the precision and effort of the pipeline. BigQuery wasn’t just the destination; it was the starting point for future analytics and data-driven decision-making.
+					</p>
+					
+					<p class="full-width-paragraph">
+							<img src="images/BigQuery_Pipeline.png" alt="Big Query Pipeline Airflow" style="width: 800px; height: auto; border-radius: 20px;">
+						</a>
+					</p>
+					<a href="https://github.com/stahir01/Data-Engineering-Portfolio/blob/main/dags/daily_transaction.py" class="btn btn-primary" target="_blank">
+                        View ETL Script
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <div id="fh5co-work" class="fh5co-bg-dark">
 		<div class="container">
