Added Tableau projects

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<h2>Hello! I’m Burny,</h2>
-					<p>I’m a Machine Learning & Data Analytics Engineer with three years of experience. My expertise lies in building robust ETL pipelines, data marts, and insightful dashboards tailored for industries like engineering, finance, and more. I’m passionate about transforming complex data into meaningful insights that drive informed decision-making.</p>
+					<p>I’m a Machine Learning & Data Analytics Engineer with almost four years of experience. My expertise lies in building robust ETL pipelines, data marts, and insightful dashboards tailored for industries like engineering, finance, and more. I’m passionate about transforming complex data into meaningful insights that drive informed decision-making.</p>
 					<p>I completed my Master’s degree at TU Berlin, specializing in Machine Learning. During my studies, I developed a range of Machine Learning, Deep Learning, and Generative AI models for real-world applications, tackling challenges with innovative solutions and advancing my skills in data science.</p>
 				</div>
 			</div>
@@ -133,6 +133,18 @@
 								</div>
 								<div class="timeline-body">
 									<p>Designed data pipelines and dashboards for various stakeholders</p>
+								</div>
+							</div>
+						</li>
+						<li class="animate-box timeline-unverted">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Data Analyst</h3>
+									<span class="company">Blitzkrieg Defense Solution	 - 09/2020 - 02/2021</span>
+								</div>
+								<div class="timeline-body">
+									<p>Designed dashboards for various customers</p>
 								</div>
 							</div>
 						</li>
