--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,29 +32,40 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">	
-	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/main_background_pic.jpg);" data-stellar-background-ratio="0.5">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center">
-					<div class="display-t js-fullheight">
-						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/profile_pic.jpg);"></div>
-							<h1><span>Burny</span></h1>
-							<h3><span>Data Consultant</span></h3>
-							<p>
-								<ul class="fh5co-social-icons">
-									<li><a href="mailto:syed.alimurad.tahir@gmail.com"><i class="icon-email"></i></a></li>
-									<li><a href="https://github.com/stahir01"><i class="icon-github2"></i></a></li>
-									<li><a href="https://www.linkedin.com/in/syed-ali-murad-tahir/"><i class="icon-linkedin2"></i></a></li>
-								</ul>
-							</p>
+		<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/main_background_pic.jpg);" data-stellar-background-ratio="0.5">
+			<div class="overlay"></div>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2 text-center">
+						<div class="display-t js-fullheight">
+							<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
+								<div class="profile-thumb" style="background: url(images/profile_pic.jpg);"></div>
+								<h1><span>Burny</span></h1>
+								<h3><span>Data Consultant</span></h3>
+								<p>
+									<ul class="fh5co-social-icons">
+										<li><a href="mailto:syed.alimurad.tahir@gmail.com"><i class="icon-email"></i></a></li>
+										<li><a href="https://github.com/stahir01"><i class="icon-github2"></i></a></li>
+										<li><a href="https://www.linkedin.com/in/syed-ali-murad-tahir/"><i class="icon-linkedin2"></i></a></li>
+									</ul>
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
+		
+				<div class="dropdown">
+					<button class="dropbtn">Projects</button>
+					<div class="dropdown-content">
+						<a href="etl_page.html">Dashboard & ETL</a>
+						<a href="llm-nlp-page.html">NLP & LLM</a>
+						<a href="ml-page.html">Machine Learning</a>
+						<a href="thesis-page.html">Thesis</a>
+					</div>
+				</div>
 			</div>
-		</div>
-	</header>
+		</header>
+		
 
 	<div id="fh5co-about" class="animate-box">
 		<div class="container">
@@ -354,6 +365,8 @@
 		</div>
 	</div>
 
+											<!-- Project Section -->
+	<!-- 
 	<div id="fh5co-work" class="fh5co-bg-dark">
 		<div class="container">
 			<div class="row animate-box">
@@ -364,44 +377,42 @@
 				</div>
 			</div>
 			<div class="row text-center">
-				<!-- ETL & Dashboard Section -->
+
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="etl_page.html" class="work-circle">
 						<div class="circle-icon">
-							<i class="icon-cogs"></i> <!-- Replace with your desired icon -->
+							<i class="icon-cogs"></i> 
 						</div>
 						<h3>Dashboard & ETL</h3>
 						<p>Abracadabra! Making data do magical things</p>
 					</a>
 				</div>
 	
-				<!-- LLM & NLP Section -->
+
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="llm-nlp-page.html" class="work-circle">
 						<div class="circle-icon">
-							<i class="icon-bubble"></i> <!-- Replace with your desired icon -->
+							<i class="icon-bubble"></i> 
 						</div>
 						<h3>NLP & LLM</h3>
 						<p>Attention is all you need</p>
 					</a>
 				</div>
 	
-				<!-- Financial Machine Learning Section -->
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="ml-page.html" class="work-circle">
 						<div class="circle-icon">
-							<i class="icon-network"></i> <!-- Replace with your desired icon -->
+							<i class="icon-network"></i> 
 						</div>
 						<h3>Machine Learning</h3>
 						<p>Decoding human and market behavior with ML sorcery</p>
 					</a>
 				</div>
 	
-				<!-- Thesis Section -->
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="thesis-page.html" class="work-circle">
 						<div class="circle-icon">
-							<i class="icon-airplane"></i> <!-- Replace with your desired icon -->
+							<i class="icon-airplane"></i> 
 						</div>
 						<h3>Thesis</h3>
 						<p>Let's build aircrafts!</p>
@@ -410,8 +421,10 @@
 			</div>
 		</div>
 	</div>
+	-->
 	
-
+											<!-- Medium Post Section -->
+	<!--
 	<div id="fh5co-blog">
 		<div class="container text-center">
 			<div class="row animate-box">
@@ -429,6 +442,7 @@
 			</div>
 		</div>
 	</div>
+	-->
 	
 	
 	<div id="fh5co-started" class="fh5co-bg-dark">
