Updatec backend and frontend. Chatbot answers questions

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -457,6 +457,25 @@
 		</div>
 	</div>
 
+	<div id="chatbot-container">
+		<div id="chatbot-icon" onclick="toggleChatbot()">💬</div>
+	
+		<div id="chatbot-popup">
+		  <div id="chatbot-header">
+			<span>Burny's AI</span>
+			<button id="close-chatbot" onclick="toggleChatbot()">✖</button>
+		  </div>
+		  <div id="chatbot-messages"></div>
+		  <div id="chatbot-input">
+			<input type="text" id="user-message" placeholder="Ask me anything about Burny..." />
+			<button onclick="sendMessage()">Send</button>
+		  </div>
+		</div>
+	  </div>
+	
+	  <script src="js/chatbot.js"></script>
+	</body>
+	</html>
 	
 	
 	<!-- jQuery -->
