Updated chatbot layout and if we close chatbot window, the chat goes away

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -462,7 +462,7 @@
 	
 		<div id="chatbot-popup">
 		  <div id="chatbot-header">
-			<span>Burny's AI</span>
+			<span>Burny's Chatty</span>
 			<button id="close-chatbot" onclick="toggleChatbot()">✖</button>
 		  </div>
 		  <div id="chatbot-messages"></div>
