--- a/index.html
+++ b/index.html
@@ -284,6 +284,9 @@
 					<h3>Dashboard Tools</h3>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="100"><span><strong>Tableau</strong></span></div>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="100"><span><strong>Power BI</strong></span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
@@ -294,9 +297,6 @@
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="100"><span><strong>Looker Studio</strong></span></div>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="100"><span><strong>Tableau</strong></span></div>
 				</div>
 			</div>
 	
@@ -336,6 +336,12 @@
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="100"><span><strong>InfluxDB</strong></span></div>
 				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="100"><span><strong>SQLite</strong></span></div>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="100"><span><strong>DuckDB</strong></span></div>
+				</div>
 			</div>
 	
 			<!-- Other Tools Section -->
@@ -364,6 +370,41 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="row row-pb-md">
+		<div class="col-md-12 text-center">
+			<h3>Machine Learning Libraries</h3>
+		</div>
+		<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+			<div class="chart" data-percent="100"><span><strong>TensorFlow</strong></span></div>
+		</div>
+		<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+			<div class="chart" data-percent="100"><span><strong>Keras</strong></span></div>
+		</div>
+		<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+			<div class="chart" data-percent="100"><span><strong>PyTorch</strong></span></div>
+		</div>
+		<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+			<div class="chart" data-percent="100"><span><strong>Scikit-learn</strong></span></div>
+		</div>
+		<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+			<div class="chart" data-percent="100"><span><strong>LangChain</strong></span></div>
+		</div>
+		<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+			<div class="chart" data-percent="100"><span><strong>HuggingFace</strong></span></div>
+		</div>
+		<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+			<div class="chart" data-percent="100"><span><strong>FastAPI</strong></span></div>
+		</div>
+		<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+			<div class="chart" data-percent="100"><span><strong>MLflow</strong></span></div>
+		</div>
+		<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+			<div class="chart" data-percent="100"><span><strong>Streamlit</strong></span></div>
+		</div>
+	</div>
+</div>
+</div>
 
 											<!-- Project Section -->
 	<!-- 
